# nonebot-plugin-whateat-pic

./: .deepsource.toml  .gitignore  .pdm-python  .pre-commit-config.yaml  LICENSE  README.md  __init__.py  pyproject.toml
.github/workflows/: python-check.yml  python-publish.yml  ruff-check.yml
nonebot_plugin_whateat_pic/: __init__.py  check_on_statup.py  check_pass.py  check_user_data.py  config.py  files.py  matcher.py  menu.py  random_pic.py
nonebot_plugin_whateat_pic/menu/: menu.py
res/: download_list.json  write_into_json.py
