[tool.poetry]
name = "nonebot-plugin-whateat-pic"
version = "1.4.3"
description = "基于Nonebot2的今天吃什么（离线版）"
authors = ["Cvandia"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/Cvandia/nonebot-plugin-whateat-pic"
repository = "https://github.com/Cvandia/nonebot-plugin-whateat-pic"

[tool.poetry.dependencies]
python = ">=3.9,<4"
nonebot2 = ">=2.0.0"
httpx = ">=0.19.0"
nonebot-adapter-onebot = ">=2.0.0"
pillow = "^10.4.0"
nonebot-plugin-alconna = "^0.53.1"
rich = "^13.9.4"
nonebot-plugin-apscheduler = "^0.5.0"

[tool.poetry.dev-dependencies]
nb-cli = "^0.6.0"
black = "^22.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
